examples-generated/cluster/ec2/v1beta1/route.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: ec2/v1beta1/route
  labels:
    testing.upbound.io/example-name: r
  name: r
spec:
  forProvider:
    destinationCidrBlock: 10.0.1.0/22
    region: us-west-1
    routeTableIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    vpcPeeringConnectionIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
